--- a/public/index.html
+++ b/public/index.html
@@ -5,21 +5,84 @@
     <meta charset="UTF-8">
     <link href="/public/css/bootstrap.css" rel="stylesheet" />
     <link href="/public/css/main.css" rel="stylesheet" />
+    <script type="text/javascript" src="/public/js/jquery-3.3.1.min.js"></script>
+    <script type="text/javascript" src="/public/js/bootstrap.bundle.js"></script>
     <script type="text/javascript" src="/public/js/bootstrap.js"></script>
-    <script type="text/javascript" src="/public/js/jquery-3.1.1.js"></script>
     <title>Go dynamic JSON</title>
 
     <script type="text/javascript">
+    var no = 1
+        
 
+        $(function(){
+            $("#add").click(function(){
+                no++
+                $tr = `<tr scope="row">
+                            <th>`+no+`</th>
+                            <td>
+                                <input type="text" />
+                            </td>
+                            <td>
+                                <div class="dropdown">
+                                    <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenu2" data-toggle="dropdown" aria-haspopup="true"
+                                        aria-expanded="false">
+                                        string 
+                                    </button>
+                                    <div class="dropdown-menu" aria-labelledby="dropdownMenu2">
+                                        <a class="dropdown-item" type="text">string</a>
+                                        <a class="dropdown-item" type="text">numeric</a>
+                                        <a class="dropdown-item" type="text">bool</a>
+                                    </div>
+                                </div>
+                            </td>
+                            </tr>`
+                $(".table").append($tr)
+            })
+        })
     </script>
 </head>
 
 <body>
     <div class="container col-lg-8 col-lg-push-2">
         <form action="/generate/{{.Title}}" method="POST">
-            <div>
-                {{.Title}}
+            <h2>
+                Struct Name:<input type="text" value="" />
+            </h2>
+            <div class="col-sm-5 col-sm-push-2">
+                <table class="table">
+                    <thead>
+                        <tr>
+                            <th scope="col">#</th>
+                            <th scope="col">Key Name</th>
+                            <th scope="col">Type</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr scope="row">
+                            <th>1</th>
+                            <td>
+                                <input type="text" />
+                            </td>
+                            <td>
+                                <div class="dropdown">
+                                    <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenu2" data-toggle="dropdown" aria-haspopup="true"
+                                        aria-expanded="false">
+                                        string 
+                                    </button>
+                                    <div class="dropdown-menu" aria-labelledby="dropdownMenu2">
+                                        <a class="dropdown-item" type="text">string</a>
+                                        <a class="dropdown-item" type="text">numeric</a>
+                                        <a class="dropdown-item" type="text">bool</a>
+                                    </div>
+                                </div>
+                            </td>
+                            </tr>
+                    </tbody>
+                </table>
             </div>
+                <input id="add" type="button" class="btn btn-primary" value="Add New Field" />
+                <input id="save" type="button" class="btn btn-primary" value="Save Structure" />
+                <input id="export" type="button" class="btn btn-primary" value="Export JSON" />
             <input type="submit" value="Save">
         </form>
     </div>
